Homer page again started on characters

--- a/Kwik'e'mart html/Kwik'e'mart.html
+++ b/Kwik'e'mart html/Kwik'e'mart.html
@@ -26,10 +26,23 @@
         <div id="main">
             <div id="content2">
                 <div id="content2_flex">
-                    <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <a href="Kwik'e'mart_photo1.html"><img src="../photos/Kiwk E mart.webp" alt="" height="200px" width="360px"></a>
                     </div>
+                    <div class="image_text">
+                        <a href="Kwik'e'mart_photo2.html"><img src="../Photos/kwik e mart.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Kwik'e'mart_photo3.html"><img src="../Photos/kwik'e'mart  counter.avif" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Kwik'e'mart_photo4.html"><img src="../photos/kwik e mart 2.jfif" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Kwik'e'mart_photo5.html"><img src="../photos/counter 2.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+
+                
                 </div>
             </div>
         </div>
