--- a/Kwik'e'mart html/Kwik'e'mart_photo4.html
+++ b/Kwik'e'mart html/Kwik'e'mart_photo4.html
@@ -28,7 +28,7 @@
                 <div id="content2_flex">
                     <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <img class="showcase" src="../Photos/kwik e mart 2.jfif" alt="" >
                     </div>
                 </div>
             </div>
