--- a/Moe's html/Moe's.html
+++ b/Moe's html/Moe's.html
@@ -26,10 +26,23 @@
         <div id="main">
             <div id="content2">
                 <div id="content2_flex">
-                    <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <a href="Moe's_photo1.html"><img src="../photos/Moe's.webp" alt="" height="200px" width="360px"></a>
                     </div>
+                    <div class="image_text">
+                        <a href="Moe's_photo2.html"><img src="../Photos/Moe's biljard.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Moe's_photo3.html"><img src="../Photos/moe's1.avif" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Moe's_photo4.html"><img src="../photos/moe's 2.jfif" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Moe's_photo5.html"><img src="../photos/moe's3.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+
+                
                 </div>
             </div>
         </div>
