--- a/Moe's html/Moe's_photo1.html
+++ b/Moe's html/Moe's_photo1.html
@@ -26,9 +26,9 @@
         <div id="main">
             <div id="content2">
                 <div id="content2_flex">
-                    <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
+                    <a class="return_button" href="Moe's.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <img class="showcase" src="../photos/Moe's.webp" alt="" >
                     </div>
                 </div>
             </div>
