--- a/Simpson_home html/Simpson_home.html
+++ b/Simpson_home html/Simpson_home.html
@@ -26,10 +26,23 @@
         <div id="main">
             <div id="content2">
                 <div id="content2_flex">
-                    <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <a href="Homer_photo1.html"><img src="../photos/Simpsons home.webp" alt="" height="200px" width="395px"></a>
                     </div>
+                    <div class="image_text">
+                        <a href="Homer_photo2.html"><img src="../Photos/simposn home living room.jfif" alt="" height="200px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Homer_photo3.html"><img src="../photos/Simpons home kitchen.jpg" alt="" height="200px" width="395px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Homer_photo4.html"><img src="../photos/barts room.jpg" alt="" height="200px" width="395px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="Homer_photo5.html"><img src="../photos/lisas room.jpg" alt="" height="200px" width="395px"></a>
+                    </div>
+
+                
                 </div>
             </div>
         </div>
