--- a/Springfield.html
+++ b/Springfield.html
@@ -29,15 +29,15 @@
             <div id="content2">
                 <div id="content2_flex">
                     <div class="image_text">
-                        <a href="Simpson_home.html"><img src="photos/Simpsons home.webp" alt="" height="200px"></a>
+                        <a href="Simpson_home html/Simpson_home.html"><img src="photos/Simpsons home.webp" alt="" height="200px"></a>
                         <p>Simpsons home</p>
                     </div>
                     <div class="image_text">
-                        <a href="Moe's.html"><img src="photos/Moe's.webp" alt="" height="200px"></a>
+                        <a href="Moe's html/Moe's.html"><img src="photos/Moe's.webp" alt="" height="200px"></a>
                         <p>Moe's</p>
                     </div>
                     <div class="image_text">
-                        <a href="Kwik'e'mart.html"><img src="photos/Kiwk E mart.webp" alt="" height="200px"></a>
+                        <a href="Kwik'e'mart html/Kwik'e'mart.html"><img src="photos/Kiwk E mart.webp" alt="" height="200px"></a>
                         <p>Kwik'e'mart</p>
                     </div>
                 </div>
