--- a/Simpson_home html/Homer_photo5.html
+++ b/Simpson_home html/Homer_photo5.html
@@ -26,9 +26,9 @@
         <div id="main">
             <div id="content2">
                 <div id="content2_flex">
-                    <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
+                    <a class="return_button" href="Simpson_home.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <img class="showcase" src="../photos/lisas room.jpg" alt="" >
                     </div>
                 </div>
             </div>
