--- a/forum.html
+++ b/forum.html
@@ -13,7 +13,7 @@
     <div id="page">
         <div id="header">
             <a href="index.html">
-                <img src="Simpson logo.png" width="auto" height="80px" id="logo">
+                <img src="photos/Simpson logo.png" width="auto" height="80px" id="logo">
             </a>
             <h1>The Simpsons Page</h1>
         </div>
