Roughly finished Simpson website

--- a/Kwik'e'mart html/Kwik'e'mart.html
+++ b/Kwik'e'mart html/Kwik'e'mart.html
@@ -25,6 +25,7 @@
         </div>
         <div id="main">
             <div id="content2">
+                <p class="information">Kwik'e'mart</p>
                 <div id="content2_flex">
                     <div class="image_text">
                         <a href="Kwik'e'mart_photo1.html"><img src="../photos/Kiwk E mart.webp" alt="" height="200px" width="360px"></a>
