--- a/Moe's html/Moe's.html
+++ b/Moe's html/Moe's.html
@@ -25,6 +25,7 @@
         </div>
         <div id="main">
             <div id="content2">
+                <p class="information">Moe's</p>
                 <div id="content2_flex">
                     <div class="image_text">
                         <a href="Moe's_photo1.html"><img src="../photos/Moe's.webp" alt="" height="200px" width="360px"></a>
