--- a/Simpson_home html/Simpson_home.html
+++ b/Simpson_home html/Simpson_home.html
@@ -25,6 +25,7 @@
         </div>
         <div id="main">
             <div id="content2">
+                <p class="information">Simpsons home</p>
                 <div id="content2_flex">
                     <div class="image_text">
                         <a href="Homer_photo1.html"><img src="../photos/Simpsons home.webp" alt="" height="200px" width="395px"></a>
