--- a/characters.html
+++ b/characters.html
@@ -26,10 +26,32 @@
         <div id="main">
             <div id="content2">
                 <div id="content2_flex">
-                    <a class="return_button" href="Kwik'e'mart.html"><p>Back</p></a>
                     <div class="image_text">
-                        <img class="showcase" src="../photos/Kiwk E mart.webp" alt="" >
+                        <a href="character profiles/homer.html"><img src="Photos/homur.jpg" alt="" height="200px" width="360px"></a>
                     </div>
+                    <div class="image_text">
+                        <a href="character profiles/Marge.html"><img src="Photos/magro.webp" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="character profiles/Bart.html"><img src="Photos/bard.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="character profiles/Lisa.html"><img src="Photos/lista.webp" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="character profiles/Maggy.html"><img src="Photos/maggy.jfif" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="character profiles/Burns.html"><img src="Photos/burning.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="character profiles/Apu.html"><img src="Photos/apua.jpg" alt="" height="200px" width="360px"></a>
+                    </div>
+                    <div class="image_text">
+                        <a href="character profiles/Moe.html"><img src="Photos/mo.avif" alt="" height="200px" width="360px"></a>
+                    </div>
+
+                
                 </div>
             </div>
         </div>
