last fixes i could find

--- a/characters.html
+++ b/characters.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simpsons etusivu</title>
-    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="grid.css">
     <script src="Simpson.js"></script>
     
 </head>
 <body>
     <div id="page">
         <div id="header">
-            <a href="../index.html">
-                <img src="../Photos/Simpson logo.png" width="auto" height="80px" id="logo">
+            <a href="index.html">
+                <img src="Photos/Simpson logo.png" width="auto" height="80px" id="logo">
             </a>
             <h1>The Simpsons Page</h1>
         </div>
 
         <div id="mainnav">
-            <a href="../Springfield.html">Springfield</a>
-            <a href="../characters.html">Characters</a>
-            <a href="../forum.html">Forum</a>
+            <a href="Springfield.html">Springfield</a>
+            <a href="characters.html">Characters</a>
+            <a href="forum.html">Forum</a>
         </div>
         <div id="main">
             <div id="content2">
